Keep compatible with Firefox
Manifest V3 disagreement issue; see:

  https://github.com/mozilla/web-ext/issues/2532#issuecomment-1657240453

--- a/manifest.json
+++ b/manifest.json
@@ -5,7 +5,9 @@
   "description": "Lists all tabs from all windows, possibly grouped and indented by TreeStyleTabs structure.",
   "permissions": ["tabs", "storage"],
   "background": {
-    "service_worker": "background.js"
+    "scripts": [
+      "background.js"
+    ]
   },
   "action": {
     "default_title": "Tabs Overview",
